@startuml

title __VIEW's Class Diagram__\n

  namespace client.gui {
    namespace view {
      class client.gui.view.GuiExceptionHandler {
          + GuiExceptionHandler()
          + uncaughtException()
      }
    }
  }
  

  namespace client.gui {
    namespace view {
      class client.gui.view.GuiView {
          # hostServices : HostServices
          + GuiView()
          + ack()
          + acquireConnection()
          + acquireConnectionMethod()
          + acquireToken()
          + acquireUsername()
          + authMethod()
          + chatMessage()
          + close()
          + error()
          + getListener()
          + isReachable()
          + nextState()
          + notifyEvent()
          + onGameBoardUpdate()
          + onKillShotTrackUpdate()
          + onPcBoardUpdate()
          + onPcUpdate()
          + onSquareUpdate()
          + request()
          + resumeGame()
          + setPlayer()
          + winners()
      }
    }
  }
  

  namespace client.gui {
    namespace view {
      class client.gui.view.ImageCache {
          {static} - cached : HashMap<String, Image>
          {static} + loadImage()
          - ImageCache()
          {static} - loadNewImage()
      }
    }
  }
  

  client.gui.view.GuiExceptionHandler .up.|> java.lang.Thread.UncaughtExceptionHandler
  client.gui.view.GuiExceptionHandler o-- common.remote_interfaces.RemotePlayer : player
  client.gui.view.GuiView .up.|> common.events.ModelEventListener
  client.gui.view.GuiView -up-|> client.view.AbstractView
  client.gui.view.GuiView o-- common.remote_interfaces.RemotePlayer : player
  client.gui.view.GuiView o-- client.gui.view.view_states.ViewState : currentGui


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
